# projectESRG

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  smartFitness
DDrivers/: Makefile  nrf24l01.h  nrf24l01module.c  utils.h
DDrivers/NRF24L01-Linux-device-driver/: README.md  gpio.h  nrf.c  radio.c  radio.h
DDrivers/NRF24L01-Linux-device-driver/nrf24_client/: nrf24_client (copy).ino  nrf24_client.ino
DDrivers/NRF24L01-Linux-device-driver/nrf24_server/: nrf24_server.ino
DDrivers/button/: btn_module.c  utils.c  utils.h
daemons/: CMakeLists.txt  acquireImage.cpp  main.c  sender  sender.c
daemons/teste/: CMakeLists.txt  ReadImage  main.cpp
doc/: Doxyfile  makefile
includes/: applicationInterface.h  camera.h  exercise.h  gui.h  guihistory.h  guinewtraining.h  guisecond.h  guitrainingsession.h  heartdaemon.h  macros.h  mainwindow.h  manageDB.h  poseClassification.h  secondwindow.h  training.h  user.h
init/: sfm_init.sh
smartFitness_autogen/: moc_predefs.h  mocs_compilation.cpp
smartFitness_autogen/CJB3AIWSVP/: moc_mainwindow.cpp  moc_secondwindow.cpp
smartFitness_autogen/include/: ui_mainwindow.h  ui_secondwindow.h
sql_database/: sfm.sql
sql_files/: smart_fitness.sql
src/: applicationInterface.cpp  camera.cpp  exercise.cpp  gui.cpp  gui.ui  guihistory.cpp  guihistory.ui  guinewtraining.cpp  guinewtraining.ui  guisecond.cpp  guisecond.ui  guitrainingsession.cpp  guitrainingsession.ui  heartdaemon.cpp  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.ui  manageDB.cpp  poseClassification.cpp  secondwindow.cpp  secondwindow.ui  training.cpp  user.cpp
